--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,16 +2,10 @@
 sonar.projectKey=Jessica-Kakshapati_HD   # Replace with your actual SonarCloud project key
 sonar.organization=Jessica-Kakshapati            # Replace with your SonarCloud organization name
 
-# Source Code Location
-sonar.sources=.
-sonar.language=js
-sonar.sourceEncoding=UTF-8
-
-# Tests
-sonar.tests=test
-sonar.test.inclusions=**/*.test.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-# Server Info
 sonar.host.url=https://sonarcloud.io
-sonar.login=<your_token>
+sonar.login=${SONAR_TOKEN}
+sonar.sources=.
+sonar.exclusions=node_modules/**,test/**
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.projectName=NodeJS Goof Vulnerable App
+sonar.sourceEncoding=UTF-8
