--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider node app.js",
     "build": "browserify -r jquery > public/js/bundle.js",
     "cleanup": "mongo express-todo --eval 'db.todos.remove({});'",
-    "test": "jest --ci --reporters=default --reporters=jest-junit"
+    "test": "snyk test"
   },
   "dependencies": {
     "adm-zip": "0.4.7",
@@ -51,13 +51,7 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "nodemon": "^2.0.7",
-    "snyk": "^1.244.0",
-    "jest": "^29.7.0",
-    "jest-junit": "^16.0.0"
-  },
-  "jest-junit": {
-    "outputDirectory": "./reports/junit",
-    "outputName": "js-test-results.xml"
+    "snyk": "^1.244.0"
   },
   "license": "Apache-2.0"
 }
