--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
   },
   "devDependencies": {
     "browserify": "^13.1.1",
+    "chai": "^6.0.1",
+    "jest": "^30.1.3",
+    "jest-junit": "^16.0.0",
+    "mocha": "^11.7.2",
     "nodemon": "^2.0.7",
     "snyk": "^1.244.0"
   },
