--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,16 @@
-# Project Identification
-sonar.projectKey=Jessica-Kakshapati_HD   # Replace with your actual SonarCloud project key
-sonar.organization=Jessica-Kakshapati            # Replace with your SonarCloud organization name
+# must be unique in a given SonarCloud organization
+sonar.projectKey=Jessica-Kakshapati_HD
+sonar.organization=Jessica-Kakshapati
 
-sonar.host.url=https://sonarcloud.io
-sonar.login=${SONAR_TOKEN}
-sonar.sources=.
-sonar.exclusions=node_modules/**,test/**
+# project metadata
+sonar.projectName=HD Project
+sonar.projectVersion=1.0
+
+# source directories
+sonar.sources=src
+
+# language
+sonar.language=js
+
+# Jest coverage report
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.projectName=NodeJS Goof Vulnerable App
-sonar.sourceEncoding=UTF-8
