--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   goof-mysql:
     image: mysql:5
-    container_name: goof-mysql
+    container_name: goof-mysql-new
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: acme
